--- a/index.html
+++ b/index.html
@@ -29,5 +29,16 @@
     <script src="main.js"></script>
     <!--- End of Main JS Import -->
   </head>
-  <body></body>
+  <body>
+    <!-- App Wrapper -->
+    <main class="app">
+      <!-- Greeting -->
+      <section class="greeting">
+        <h2 class="title">
+          What's up, <input type="text" id="name" placeholder="Name here" />
+        </h2>
+      </section>
+      <!-- End of Greeting -->
+    </main>
+  </body>
 </html>
