--- a/index.html
+++ b/index.html
@@ -81,6 +81,14 @@
         </form>
       </section>
       <!-- End of New Todo -->
+
+      <!-- Todo List -->
+      <section class="todo-list">
+        <h3>TODO LIST</h3>
+        <div class="list" id="todo-list"></div>
+      </section>
+      <!-- End of Todo List -->
     </main>
+    <!-- End of App Wrapper -->
   </body>
 </html>
