--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
             id="content"
             placeholder="e.g. make a video"
           />
+
+          <label for="anyDate">ADD DUE DATE</label>
+          <input type="date" class="date" id="datepicker" />
+
           <h4>Pick a category</h4>
           <div class="options">
             <label>
