--- a/index.html
+++ b/index.html
@@ -24,10 +24,6 @@
       crossorigin="anonymous"
     ></script>
     <!-- End of JS Icons Import-->
-
-    <!--- Main JS Import -->
-    <script src="main.js"></script>
-    <!--- End of Main JS Import -->
   </head>
   <body>
     <!-- App Wrapper -->
@@ -55,6 +51,9 @@
 
           <label for="anyDate">ADD DUE DATE</label>
           <input type="date" class="date" id="datepicker" />
+
+          <label for="due-time">ADD DUE TIME</label>
+          <input type="time" class="time" id="due-time" />
 
           <h4>Pick a category</h4>
           <div class="options">
@@ -94,5 +93,9 @@
       <!-- End of Todo List -->
     </main>
     <!-- End of App Wrapper -->
+
+    <!--- Main JS Import -->
+    <script src="main.js"></script>
+    <!--- End of Main JS Import -->
   </body>
 </html>
