Added undo & redo button

--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
         <div class="list" id="todo-list"></div>
       </section>
       <!-- End of Todo List -->
+
+      <!-- Undo/Redo buttons -->
+      <button id="undo-button" onclick="undo()">Undo</button>
+      <button id="redo-button" onclick="redo()">Redo</button>
+      <!-- End of Undo/Redo buttons -->
     </main>
     <!-- End of App Wrapper -->
 
